# proshade

./: .gitignore  CMakeLists.txt  CMakeLists.txt.orig  Doxyfile  Doxyfile.orig  LICENSE.txt  README.md  ToDo.txt  error_list.txt  setup.py  standardDependencies.txt  valgrind_suppressions_mac.supp
cmake/findFFTW/: FindFFTW.cmake
cmake/findLapack/: CMakePushCheckState.cmake  CheckFunctionExists.cmake  lapackConfig.cmake
cmake/lib/: CMakeLists.txt
cmake/python/: CMakeLists.txt
cmake/python3/: CMakeLists.txt  CMakeLists_old.txt
cmake/sources/: CMakeLists.txt
documentation/html/: _pro_s_h_a_d_e_8cpp.html  _pro_s_h_a_d_e_8cpp.js  _pro_s_h_a_d_e_8cpp_source.html  _pro_s_h_a_d_e_8hpp.html  _pro_s_h_a_d_e_8hpp.js  _pro_s_h_a_d_e_8hpp_source.html  _pro_s_h_a_d_e__data_8cpp.html  _pro_s_h_a_d_e__data_8cpp.js  _pro_s_h_a_d_e__data_8cpp_source.html  _pro_s_h_a_d_e__data_8hpp.html  _pro_s_h_a_d_e__data_8hpp.js  _pro_s_h_a_d_e__data_8hpp_source.html  _pro_s_h_a_d_e__distances_8cpp.html  _pro_s_h_a_d_e__distances_8cpp_source.html  _pro_s_h_a_d_e__distances_8hpp.html  _pro_s_h_a_d_e__distances_8hpp_source.html  _pro_s_h_a_d_e__exceptions_8hpp.html  _pro_s_h_a_d_e__exceptions_8hpp_source.html  _pro_s_h_a_d_e__io_8cpp.html  _pro_s_h_a_d_e__io_8cpp_source.html  _pro_s_h_a_d_e__io_8hpp.html  _pro_s_h_a_d_e__io_8hpp.js  _pro_s_h_a_d_e__io_8hpp_source.html  _pro_s_h_a_d_e__map_manip_8cpp.html  _pro_s_h_a_d_e__map_manip_8cpp_source.html  _pro_s_h_a_d_e__map_manip_8hpp.html  _pro_s_h_a_d_e__map_manip_8hpp.js  _pro_s_h_a_d_e__map_manip_8hpp_source.html  _pro_s_h_a_d_e__maths_8cpp.html  _pro_s_h_a_d_e__maths_8hpp.html  (+208 more)
proshade/: CMakeLists.txt  Doxyfile  LICENSE.txt  ToDo.txt  error_list.txt  standardDependencies.txt
proshade/cmake/lib/: CMakeLists.txt  lib.cmake
proshade/cmake/python/: CMakeLists.txt
proshade/cmake/sources/: CMakeLists.txt
proshade/documentation/html/: _pro_s_h_a_d_e_8cpp.html  _pro_s_h_a_d_e_8cpp_source.html  _pro_s_h_a_d_e_8hpp.html  _pro_s_h_a_d_e_8hpp_source.html  _pro_s_h_a_d_e__data_8cpp.html  _pro_s_h_a_d_e__data_8cpp.js  _pro_s_h_a_d_e__data_8cpp_source.html  _pro_s_h_a_d_e__data_8hpp.html  _pro_s_h_a_d_e__data_8hpp.js  _pro_s_h_a_d_e__data_8hpp_source.html  _pro_s_h_a_d_e__distances_8cpp.html  _pro_s_h_a_d_e__distances_8cpp_source.html  _pro_s_h_a_d_e__distances_8hpp.html  _pro_s_h_a_d_e__distances_8hpp.js  _pro_s_h_a_d_e__distances_8hpp_source.html  _pro_s_h_a_d_e__exceptions_8cpp.html  _pro_s_h_a_d_e__exceptions_8cpp_source.html  _pro_s_h_a_d_e__exceptions_8hpp.html  _pro_s_h_a_d_e__exceptions_8hpp_source.html  _pro_s_h_a_d_e__io_8cpp.html  _pro_s_h_a_d_e__io_8cpp_source.html  _pro_s_h_a_d_e__io_8hpp.html  _pro_s_h_a_d_e__io_8hpp.js  _pro_s_h_a_d_e__io_8hpp_source.html  _pro_s_h_a_d_e__map_manip_8cpp.html  _pro_s_h_a_d_e__map_manip_8cpp_source.html  _pro_s_h_a_d_e__map_manip_8hpp.html  _pro_s_h_a_d_e__map_manip_8hpp.js  _pro_s_h_a_d_e__map_manip_8hpp_source.html  _pro_s_h_a_d_e__maths_8cpp.html  _pro_s_h_a_d_e__maths_8cpp_source.html  _pro_s_h_a_d_e__maths_8hpp.html  _pro_s_h_a_d_e__maths_8hpp.js  _pro_s_h_a_d_e__maths_8hpp_source.html  _pro_s_h_a_d_e__messages_8cpp.html  _pro_s_h_a_d_e__messages_8cpp_source.html  _pro_s_h_a_d_e__messages_8hpp.html  _pro_s_h_a_d_e__messages_8hpp.js  _pro_s_h_a_d_e__messages_8hpp_source.html  _pro_s_h_a_d_e__misc_8cpp.html  (+223 more)
proshade/documentation/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_10.js  functions_11.js  functions_12.js  functions_13.js  functions_2.js  functions_3.js  functions_4.js  (+35 more)
proshade/examples/libproshade/: advancedAccess_distances.cpp  advancedAccess_overlay.cpp  advancedAccess_reboxing.cpp  advancedAccess_symmetry.cpp  compilationCommands.txt  proshadeBinary.cpp  simpleAccess_distances.cpp  simpleAccess_overlay.cpp  simpleAccess_reboxing.cpp  simpleAccess_symmetry.cpp
proshade/examples/python/: advancedAccess_distances.py  advancedAccess_overlay.py  advancedAccess_reBox.py  advancedAccess_symmetry.py  directAccess.py  howto_accessInterimResults.py  howto_passProcessedMap.py  howto_useGemmiObject.py  simpleAccess_distances.py  simpleAccess_overlay.py  simpleAccess_reBox.py  simpleAccess_symmetry.py
proshade/interfacedCodes/EMDA/rotationFunctionMaps/: plotRotationFunctionSpheres.py  plotRotationFunctionSpheres_new_plotly.py
proshade/interfacedCodes/EMDA/symmetryPredictions/: getMaskedSymmetryPredictions.py  getMaskedSymmetryPredictions_new.py  getMaskedSymmetryPredictions_new2.py
proshade/interfacedCodes/EMDA/symmetryPredictions_centre/: getMaskedSymmetryPredictions_centre.py
proshade/src/proshade/: ProSHADE.cpp  ProSHADE.hpp  ProSHADE_data.cpp  ProSHADE_data.hpp  ProSHADE_distances.cpp  ProSHADE_distances.hpp  ProSHADE_exceptions.cpp  ProSHADE_exceptions.hpp  ProSHADE_io.cpp  ProSHADE_io.hpp  ProSHADE_mapManip.cpp  ProSHADE_mapManip.hpp  ProSHADE_maths.cpp  ProSHADE_maths.hpp  ProSHADE_messages.cpp  ProSHADE_messages.hpp  ProSHADE_misc.cpp  ProSHADE_misc.hpp  ProSHADE_overlay.cpp  ProSHADE_overlay.hpp  ProSHADE_peakSearch.cpp  ProSHADE_peakSearch.hpp  ProSHADE_precomputedValues.cpp  ProSHADE_precomputedValues.hpp  ProSHADE_settings.hpp  ProSHADE_spheres.cpp  ProSHADE_spheres.hpp  ProSHADE_sphericalHarmonics.cpp  ProSHADE_sphericalHarmonics.hpp  ProSHADE_symmetry.cpp  ProSHADE_symmetry.hpp  ProSHADE_tasks.cpp  ProSHADE_tasks.hpp  ProSHADE_typedefs.hpp  ProSHADE_version.hpp  ProSHADE_wignerMatrices.cpp  ProSHADE_wignerMatrices.hpp
proshade/src/python/: pyProSHADE.cpp  pyProSHADE_bindings.cpp  pyProSHADE_data.cpp  pyProSHADE_distances.cpp  pyProSHADE_mapManip.cpp  pyProSHADE_maths.cpp  pyProSHADE_symmetry.cpp
proshade/winLibs/x64/FFTW3/: libfftw3-3.exp  libfftw3-3.lib
proshade/winLibs/x64/SOFT2/: soft2.lib
proshade/winLibs/x64/ZLIB/: zlib.lib
(+176 files in other folders)
